fix: spacing between input and button

--- a/source/scenes/home/SendAsset/Send/Send.scss
+++ b/source/scenes/home/SendAsset/Send/Send.scss
@@ -148,6 +148,7 @@
         .address {
           input {
             padding-left: 15px;
+            padding-right: 70px;
           }
 
           &.verified {
